<resources>
    <string name="app_name">Blood Savior</string>
    <string name="blood">Blood</string>
    <string name="bloodBank">Blood Bank</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_gender">Gender</string>
    <string name="enter_your_age">age</string>
    <string name="enter_your_bloodGroup">Blood Group</string>
    <string name="enter_your_city">City</string>
    <string name="enter_your_phoneNumber">Enter phone number</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="enter_your_password">Password</string>
    <string name="alreadyHaveAccount">Already Have Account? Sign In</string>
    <string name="enter_your_email">Email</string>
    <string name="loginSuccessfull">Login Successful</string>
    <string name="loginFailedwithaargument">Login Failed %1$s</string>
    <string name="name">Name :</string>
    <string name="b_group">b.group :</string>
    <string name="area">Area :</string>
    <string name="logout">Logout</string>
    <string name="lastDonation">Last Donation :</string>
    <string name="gender">Gender :</string>
    <string name="age">Age :</string>
    <string name="city">City :</string>
    <string name="phone">Phone :</string>
    <string name="findDoners">Find doners near you</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feed">Feed</string>
    <string name="requests">Requests</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="chats">Chats</string>
    <string name="looking_for"> Looking for : </string>
    <string name="userName">userName  </string>
    <string name="timeAgo">Time Ago</string>
    <string name="address">Address</string>
    <string name="IamthedemoDescriotion">I am  the demo description</string>
    <string name="_10_love">10 Love</string>
    <string name="share">Share</string>
    <string name="_100_views">100 Views</string>
    <string name="O_positive">O+</string>
    <string name="demoArea">Demo Area</string>
    <string name="district">District</string>
    <string name="chooseBloodGroup">Choose Blood Group</string>
    <string name="aPositive">A+</string>
    <string name="aNegative"> A- </string>
    <string name="BPositive">B+</string>
    <string name="BNegative">B-</string>
    <string name="ONegative">O- </string>
    <string name="ABPositive">AB+</string>
    <string name="ABNegative">AB-</string>
    <string name="enterYourDistrictHere">Enter Your District Here</string>
    <string name="enterYourAreaHere">Enter You rArea Here</string>
    <string name="postDescription">Post Description</string>
    <string name="postDescriptionHint">Write Descriptiion about your request. more information you give here, more chances to get faster response</string>
    <string name="upload_an_image">Upload an Image</string>
    <string name="cause">Cause</string>
    <string name="cancer">Cancer</string>
    <string name="dengue">Dengue</string>
    <string name="caesar">Caesar</string>
    <string name="thalassemia">Thalassemia</string>
    <string name="other">Other</string>
    <string name="makenewrequest">Make Request</string>
    <string name="advancedSearch">Advanced Search</string>
    <string name="genderr">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="openAdvancedSearch">open Advanced Search</string>
    <string name="closeAdvancedSearch">Close Advanced Search</string>
    <string name="dateAndTime">Date and Time</string>
    <string name="unitBags">Unit / Bags</string>
    <string name="enterDistrict">Enter District</string>
    <string name="enterArea">Enter Area</string>
    <string name="writeSomethingHere">Write something here</string>
    <string name="pleaseSelectAMountOfBlood">Please Select Amount of Blood</string>
    <string name="pleaseSelectBloodGroup">Please Select Blood Group</string>
    <string name="pleaseSelectCause_Disease">Please Select Cause/Disease</string>
    <string name="pleaseSelectCause">Please Select Cause</string>
    <string name="bloodGroup">Blood Group</string>
    <string name="profileUpdateFailed">profileUpdateFailed</string>
    <string name="loading">Loading...</string>
    <string name="myRequests">My Requests</string>
    <string name="accepted">Accepted</string>
    <string name="comma">,</string>
    <string name="nearbydonars">Nearby donars</string>
    <string name="i_want_to_donate">I want to donate</string>
    <string name="totalDonation">Total Donation</string>
    <string name="thirteen">13</string>
    <string name="thirteenthApril2020">13/3/2020</string>
    <string name="donarsGroup">Donars Group</string>
    <string name="isLookingFor">"is looking for : "</string>
    <string name="no_account_sign_up">No Account? Sign up</string>
    <string name="canceled">Canceled</string>
    <string name="snapshotDoesnotExists">Snapshot does not exists</string>
    <string name="home">Home</string>
    <string name="about_us">About US</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="reward_card">Reward Card</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="enter_your_district">Enter Your District</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="PasswordAndConfirmPasswordDidntMatch">Password and Confrm Password Didn\'t matches</string>
    <string name="incorrectEmailFOrmat">Incorrect Email Format</string>
    <string name="ConfirmPassword">confirmPassword</string>
    <string name="signupSuccessful">Signup Successful</string>
    <string name="passwordDidntMatch">Password Didn\'t Match</string>
    <string name="enter_your_area">Enter Your Area</string>
    <string name="dateNotGiven">Date Not Given</string>
    <string name="zero">0</string>
    <string name="writeMessage">Write Message..</string>
    <string name="hellowSIrHowAreYou">Hello, How are you?</string>
    <string name="delete">Delete</string>
    <string name="forward">Forward</string>
    <string name="download">Download</string>
    <string name="video">Video</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallary</string>
    <string name="hint_enter_email">Enter Email</string>
    <string name="hint_enter_password">Enter Password</string>
    <string name="name_btn_login">Login</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="hint_enter_name">Enter Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="already_have_account">Already have account? Login </string>
    <string name="name_btn_register">Register</string>
    <string name="invalid_email_address">Invalid Email Address</string>
    <string name="password_mismatch">Password and Confirm password doesn\'t matches.</string>
    <string name="donthaveAccount">Do not have account?</string>
    <string name="signUp">Sign Up</string>
    <string name="failed_to_create_profile">Failed to create profile</string>
    <string name="name_btn_logout">Logout</string>
    <string name="name_btn_save">Save</string>
    <string name="pickNewImage">Pick New Image</string>
    <string name="removeImage">Remove Image</string>
    <string name="name_btn_changePassword">Change Password</string>
    <string name="passwordChangedSuccessfully">Password Changed Successfully</string>
    <string name="passwordChangedFailed">Failed to change password</string>
    <string name="resetPasswordInstructionHasBeenSent">Reset Password Instructions has been sent to : %1$s</string>
    <string name="retrySendingReset">Retry</string>
    <string name="close">Close</string>
    <string name="retry">Retry</string>
    <string name="retryTimer">Retry in : %1$s</string>
    <string name="resetPasswordEmailSendingFailed">Reset Password Email Sending Failed</string>
    <string name="name_btn_reset">Reset Passwoed</string>
    <string name="loadingPleaseWait">Loading, Please Wait...</string>
    <string name="email">Email :</string>
    <string name="lincoln">Lincoln</string>
    <string name="demoPhoneNumber">01670878110</string>
    <string name="invite">Invite</string>
    <string name="aboutUsText">A blood bank is a place where blood is collected and stored before it is used for transfusions.
        Blood banking takes place in the lab. This is to make sure that donated blood and blood products are safe before they are used.
        Blood banking also determines the blood type. You can ask for any type of blood you need and also you can easily see who n]is needed
        of blood in realtime\n\nHere you can request for blood when ever you need blood. Additionally if you want to donate blood, you will be notified about all
         nearby people who need your blood. The intention is to build a community of blood donors so that everyone can get blood whenever they need.
    </string>
    <string name="descriptionPrivacyPolicy">BloodBank.Live respects the privacy of its users and has developed this Privacy Policy to demonstrate its commitment to protecting your privacy. These privacy policies (the "Privacy Policy") are intended to describe for you, as an individual who is a user of mobile app and services offered by BloodBank.Live, the information we collect, how that information may be used, with whom it may be shared, and your choices about such uses and disclosures.

We encourage you to read this Privacy Policy carefully when using this app. By using this app, you are accepting the practices described in this Privacy Policy.

If you have any questions about our privacy practices, please refer to the end of this Privacy Policy for information on How to Contact Us.</string>
    <string name="contact">Contact</string>
    <string name="emailAddressValue">dev.lincoln47@gmail.com</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="donorRegistration">Doner Registration</string>
    <string name="descriptionDonorRegistrationValue">By sign in through our app you will be registered as blood donor, however you will get blood request only if our search criteria matches your blood group, location and donation history.</string>
    <string name="informationCollection">Information Collection</string>
    <string name="descriptionInfoUsesValue">We may use information that we collect about you to
                    deliver the information to show in the app,
                    perform research and analysis about blood donors, requesters, blood donations etc,
                    communicate with you by e-mail, mobile devices,
                    to facilitate your contact details to blood requester for sending message or calling you directly,
                    enforce our terms and conditions.</string>
    <string name="descriptionInformationCollectionValue">We may collect personal information that can identify you,
        such as your name, email address, contact details, location and other information also that does identify you but required
        for the app like your blood group. When you provide personal information through our app,
        the information may be sent to our servers.</string>
    <string name="informationUses">Information Uses</string>
    <string name="protectionOfPersonalInformation">Protection Of Personal Information</string>
    <string name="description_protectionOfPersonalInformationValue">We take care of the personal information of user with the maximum security.
                    We never use or share any kind of information in any other service or we never share this with other. The information isonly available
                    to the users of this application.
    </string>
    <string name="contactUs">Contact Us</string>
</resources>