<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/menu_aboutUs_actionbar_home"
            android:title="@string/about_us"
            app:showAsAction="never"
            />
        <item
            android:id="@+id/menu_rateUs_actionbar_home"
            app:showAsAction="never"
            android:title="@string/rate_us"/>


        <item
            android:id="@+id/menu_privacyPolicy_actionbar_home"
            app:showAsAction="never"
            android:title="@string/privacy_policy"/>

        <item
            android:id="@+id/menu_rewardCard_actionbar_home"
            app:showAsAction="never"
            android:title="@string/reward_card"/>

        <item
            android:id="@+id/menu_logOut_actionbar_home"
            app:showAsAction="never"
            android:title="@string/logout"/>
    </menu>