<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    >

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="16dp"
        android:background="@color/appBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="1dp"
            android:id="@+id/ll_sampleInviteLayout"
            android:padding="1dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_username_sampleLayout_inviteFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="@string/lincoln"/>

            <TextView
                android:id="@+id/tv_phone_sampleLayout_inviteFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                tools:text="@string/demoPhoneNumber"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_invite_sampleLayout_inviteFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/red"
                tools:text="@string/invite"
                android:visibility="visible"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/appBackground"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>




</LinearLayout>